@@ -160,7 +160,16 @@
       <td nowrap="nowrap"> </td>
       <td nowrap="nowrap">PDA</td>
       <td nowrap="nowrap"><a href="http://www2.pmb.ncep.noaa.gov/wiki/index.php/PDA_Subscription_Information#WCOSS_MYDUST_GRIB">WCOSS_MYDUST_GRIB</a></td>
-      <td nowrap="nowrap">wgrbbul/dust/(filename)</td>
+      <td nowrap="nowrap">wgrbbul/dust/{filename}</td>
+    </tr>
+    <tr>
+      <td nowrap="nowrap">EFIRE-VIIRSI_v1r2_???_s???????????????_e???????????????_c???????????????.txt</td>
+      <td nowrap="nowrap">AEROSOL</td>
+      <td nowrap="nowrap">VIIRS eFire I-Band  </td>
+      <td nowrap="nowrap"> </td>
+      <td nowrap="nowrap">PDA</td>
+      <td nowrap="nowrap"><a href="http://www2.pmb.ncep.noaa.gov/wiki/index.php/PDA_Subscription_Information">WCOSS_EFIRE</a></td>
+      <td nowrap="nowrap">/dcom/$PDY/af_viirs/{filename}</td>
     </tr>
     <tr>
       <td nowrap="nowrap"><font color="red">GLOBCOMPLIR.??????????</font></td>
@@ -280,7 +289,7 @@
       <td nowrap="nowrap">b021/xx053</td>
     </tr>
     <tr>
-      <td nowrap="nowrap">glsea-temps.dat</td>
+      <td nowrap="nowrap">glsea-temps_1024_3.dat</td>
       <td nowrap="nowrap">NAMSST</td>
       <td nowrap="nowrap">Great Lakes Daily Average Sfc. Water Temp.</td>
       <td nowrap="nowrap">&nbsp; </td>
@@ -301,6 +310,15 @@
       <td nowrap="nowrap"><font color="red">ATMS_v1r0_j01_s<small>???????????????</small>_e<small>???????????????</small>_c<small>???????????????</small>.bufr</font></td>
       <td nowrap="nowrap">NPP_ATMS</td>
       <td nowrap="nowrap">NOAA-20 ATMS brightness temperatures</td>
+      <td nowrap="nowrap">ATMS</td>
+      <td nowrap="nowrap">PDA</td>
+      <td nowrap="nowrap"><a href="http://www2.pmb.ncep.noaa.gov/wiki/index.php/PDA_Subscription_Information#WCOSS_ATMS_BUFR">WCOSS_ATMS_BUFR</a></td>
+      <td nowrap="nowrap">b021/xx203</td>
+    </tr>
+    <tr>
+      <td nowrap="nowrap"><font color="red">ATMS_v1r0_n21_s<small>???????????????</small>_e<small>???????????????</small>_c<small>???????????????</small>.bufr</font></td>
+      <td nowrap="nowrap">NPP_ATMS</td>
+      <td nowrap="nowrap">NOAA-21 ATMS brightness temperatures</td>
       <td nowrap="nowrap">ATMS</td>
       <td nowrap="nowrap">PDA</td>
       <td nowrap="nowrap"><a href="http://www2.pmb.ncep.noaa.gov/wiki/index.php/PDA_Subscription_Information#WCOSS_ATMS_BUFR">WCOSS_ATMS_BUFR</a></td>
@@ -345,16 +363,25 @@
     <tr>
       <td nowrap="nowrap"><font color="red" size="-1">NUCAPS-C0431_v2r0_j01_s???????????????_e???????????????_c???????????????.bufr</font></td>
       <td nowrap="nowrap">NPP_CRIS_431</td>
-      <td nowrap="nowrap">S-NPP CrIS full spectral 431 channel (subset) radiances</td>
+      <td nowrap="nowrap">NOAA-20 CrIS full spectral 431 channel (subset) radiances</td>
       <td nowrap="nowrap">CRISF4</td>
       <td nowrap="nowrap">PDA</td>
       <td nowrap="nowrap"><a href="http://www2.pmb.ncep.noaa.gov/wiki/index.php/PDA_Subscription_Information#WCOSS_SNPP_CrIS_C0431_BUFR">WCOSS_SNPP_CrIS_C0431_BUFR</a></td>
       <td nowrap="nowrap">b021/xx206</td>
     </tr>
     <tr>
-      <td nowrap="nowrap"><font size=-1 color="red">OMPS-TC_v4r2_npp_s???????????????_e???????????????_c???????????????.bufr<br/>OMPS-TC_v4r2_j01_s???????????????_e???????????????_c???????????????.bufr</font></td>
+      <td nowrap="nowrap"><font color="red" size="-1">NUCAPS-C0431_v2r0_n21_s???????????????_e???????????????_c???????????????.bufr</font></td>
+      <td nowrap="nowrap">NPP_CRIS_431</td>
+      <td nowrap="nowrap">NOAA-21 CrIS full spectral 431 channel (subset) radiances</td>
+      <td nowrap="nowrap">CRISF4</td>
+      <td nowrap="nowrap">PDA</td>
+      <td nowrap="nowrap"><a href="http://www2.pmb.ncep.noaa.gov/wiki/index.php/PDA_Subscription_Information#WCOSS_SNPP_CrIS_C0431_BUFR">WCOSS_SNPP_CrIS_C0431_BUFR</a></td>
+      <td nowrap="nowrap">b021/xx206</td>
+    </tr>
+    <tr>
+      <td nowrap="nowrap"><font size=-1 color="red">OMPS-TC_v4r3_npp_s???????????????_e???????????????_c???????????????.bufr<br/>OMPS-TC_v4r3_j01_s???????????????_e???????????????_c???????????????.bufr<br/>OMPS-TC_v4r3_n21_s???????????????_e???????????????_c???????????????.bufr</font></td>
       <td nowrap="nowrap">NPP_OMPS</td>
-      <td nowrap="nowrap">NOAA-20, S-NPP OMPS Total Column Ozone (version 8)</td>
+      <td nowrap="nowrap">NOAA-21, NOAA-20, S-NPP OMPS Total Column Ozone (version 8)</td>
       <td nowrap="nowrap">OMPST8</td>
       <td nowrap="nowrap">PDA</td>
       <td nowrap="nowrap"><a href="http://www2.pmb.ncep.noaa.gov/wiki/index.php/PDA_Subscription_Information#WCOSS_NDE_OMPS_TC_V8_OZONE_BUFR">WCOSS_NDE_OMPS_TC_V8_OZONE_BUFR</a></td>
@@ -397,7 +424,7 @@
       <td nowrap="nowrap">b008/xx012</td>
     </tr>
     <tr>
-      <td nowrap="nowrap"><font color="red">OMI-Aura_L2-OMTO3_????m????t????-o?????_v883-????m????t??????.he5</font></td>
+      <td nowrap="nowrap"><font color="red">OMI-Aura_L2-OMTO3_????m????t????-o??????_v883-????m????t??????.he5</font></td>
       <td nowrap="nowrap">OZONE_ORBIT</td>
       <td nowrap="nowrap">Aura OMI Ozone</td>
       <td nowrap="nowrap">OMI</td>
@@ -482,7 +509,7 @@
       <td nowrap="nowrap">RADSND</td>
       <td nowrap="nowrap">1x1 FOV (SFOV) GOES-16 Cloud from NASA/LANGLEY</td>
       <td nowrap="nowrap">LGYCLD </td>
-      <td nowrap="nowrap">primary: typhoon.larc.nasa.gov<sup><a href="#typhoon">contact info</a></sup><br>backup: gsdftp.fsl.noaa.gov<sup><a href="#typhoon">contact info</a></sup></td>
+      <td nowrap="nowrap">primary: ftps-out1.ncep.noaa.gov</td>
       <td nowrap="nowrap">N/A</td>
       <td nowrap="nowrap">b012/xx150</td>
     </tr>
@@ -491,7 +518,7 @@
       <td nowrap="nowrap">RADSND</td>
       <td nowrap="nowrap">1x1 FOV (SFOV) GOES-18 Cloud from NASA/LANGLEY</td>
       <td nowrap="nowrap">LGYCLD </td>
-      <td nowrap="nowrap">primary: typhoon.larc.nasa.gov<sup><a href="#typhoon">contact info</a></sup><br>backup: gsdftp.fsl.noaa.gov<sup><a href="#typhoon">contact info</a></sup></td>
+      <td nowrap="nowrap">primary: ftps-out1.ncep.noaa.gov</td>
       <td nowrap="nowrap">N/A</td>
       <td nowrap="nowrap">b012/xx150</td>
     </tr>
@@ -809,24 +836,6 @@
       <td nowrap="nowrap">PDA</td>
       <td nowrap="nowrap"><a href="http://www2.pmb.ncep.noaa.gov/wiki/index.php/PDA_Subscription_Information">WCOSS_GMASI_BLEND_ICE_SH_GRIB</a></td>
       <td nowrap="nowrap">wgrbbul/GMASI-Ice-SH2km_v1r0_blend_s???????????????_e???????????????_c???????????????.grib2</td>
-    </tr>
-    <tr>
-      <td nowrap="nowrap">NPR.SNWN.SP.D?????.S1200.MESH16<sup><a href="#3">(3)</a></sup>
-      </td><td nowrap="nowrap">SNOW</td>
-      <td nowrap="nowrap">USAF 16th mesh N.Hem. snow-depth/sea-ice</td>
-      <td nowrap="nowrap">&nbsp; </td>
-      <td nowrap="nowrap">now in Data Flow</td>
-      <td nowrap="nowrap"><a href="http://www2.pmb.ncep.noaa.gov/wiki/index.php/PDA_Subscription_Information#WCOSS_SNWN_MESH16">WCOSS_SNWN_MESH16</a></td>
-      <td nowrap="nowrap">wgrbbul/NPR.SNWN.SP.S1200.MESH16</td>
-    </tr>
-    <tr>
-      <td nowrap="nowrap">NPR.SNWS.SP.D?????.S1200.MESH16<sup><a href="#3">(3)</a></sup></td>
-      <td nowrap="nowrap">SNOW</td>
-      <td nowrap="nowrap">USAF 16th mesh S.Hem. snow-depth/sea-ice</td>
-      <td nowrap="nowrap">&nbsp; </td>
-      <td nowrap="nowrap">now in Data Flow</td>
-      <td nowrap="nowrap"><a href="http://www2.pmb.ncep.noaa.gov/wiki/index.php/PDA_Subscription_Information#WCOSS_SNWN_MESH16">WCOSS_SNWS_MESH16</a></td>
-      <td nowrap="nowrap">wgrbbul/NPR.SNWS.SP.S1200.MESH16</td>
     </tr>
     <tr>
       <td nowrap="nowrap">NPR.ATNC.NP.D?????.S????.E????.????????</td>
